[package]
name = "generate_token"
version = "0.1.0"
edition = "2018"
lto = "fat"

[profile.release]

[dependencies]
tokio = { version = "1.17.0", features = ["macros"] }
lambda_http = "0.5.1"
serde_json = "1.0"
uuid = {version="0.8",features=["v4"]}
regex = "1"
aws-sdk-cognitoidentityprovider = "0.8.0"
aws-sdk-dynamodb = "0.8.0"
aws-sdk-lambda = "0.8.0"
aws-smithy-types = "0.38.0"
aws-config = "0.8.0"
aws_lambda_events = "0.6.1"
simple_logger = "1.11.0"
tower-http = { version = "0.2", features = ["cors"] }
log = "0.4.14"
lazy_static = "1.4.0"
async_once = "0.2.6"